# naminote

./: .gitignore  CHANGELOG.md  README.md  build.bat  com.github.ShotaXiangtai.naminote.metainfo.xml  gen-icons.js  main.js  package-lock.json  package.json  preload.js  start.bat
.github/workflows/: build.yml
flatpak/: com.github.ShotaXiangtai.naminote.desktop  com.github.ShotaXiangtai.naminote.yml
renderer/: app.js  index.html  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
