[package]
name = "naminote"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[profile.release]
lto = true
opt-level = "s"
